--- a/index.html
+++ b/index.html
@@ -80,7 +80,106 @@
         <img src="img/about.jpg" class="About_img">
       </div>
     </div>
-
+    <div class="Service">
+      <p class="Service_small_title">Service</p>
+      <h2 class="Service_title">サービス内容</h2>
+      <div class="Service_contents">
+        <div class="Service_content_1">
+          <img src="img/service__first.svg" class="Service_content_1_img">
+          <h3>教育事業</h3>
+          <p>サンプルテキストがここに入ります。サンプルテキストがここに入ります。サンプルテキストがここに入ります。</p>
+        </div>
+        <div class="Service_content">
+          <div class="Service_content_2">
+            <img src="img/service__first.svg" class="Service_content_2_img">
+            <div class="Service_content_2_text">
+             <h3>教育事業</h3>
+             <p>サンプルテキストがここに入ります。サンプルテキストがここに入ります。サンプルテキストがここに入ります。</p>
+            </div>
+          </div>
+          <div class="Service_content_3">
+            <img src="img/service__first.svg" class="Service_content_3_img">
+            <div class="Service_content_3_text">
+             <h3>教育事業</h3>
+             <p>サンプルテキストがここに入ります。サンプルテキストがここに入ります。サンプルテキストがここに入ります。</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="Blog">
+     <div class="Blog_content">
+       <p class="Blog_small_title">Blog</p>
+       <h2 class="Blog_title">ブログ</h2>
+       <div class="Blog_cards">
+        <div class="Blog_card">
+          <img src="img/blog__first.jpg" class="Blog_card_img">
+          <div class="Blog_card_content">
+            <p class="Blog_card_text">プログラミング学習の勉強方法を特集。挫折しない秘訣とは？</p>
+            <div class="Blog_card_parts">
+              <p>2021/01/01</p>
+              <p>#COACHTECH</p>
+            </div>
+          </div>
+        </div>  
+        <div class="Blog_card">
+          <img src="img/blog__first.jpg" class="Blog_card_img">
+          <div class="Blog_card_content">
+            <p class="Blog_card_text">プログラミング学習の勉強方法を特集。挫折しない秘訣とは？</p>
+            <div class="Blog_card_parts">
+              <p>2021/01/01</p>
+              <p>#COACHTECH</p>
+            </div>
+          </div>
+        </div>
+        <div class="Blog_card">
+          <img src="img/blog__first.jpg" class="Blog_card_img">
+          <div class="Blog_card_content">
+            <p class="Blog_card_text">プログラミング学習の勉強方法を特集。挫折しない秘訣とは？</p>
+            <div class="Blog_card_parts">
+              <p>2021/01/01</p>
+              <p>#COACHTECH</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a href="#" class="Blog_btn">一覧ページへ</a>
+     </div>
+    </div>
+    <div class="Company">
+     <div class="Company_content">
+      <p class="Company_small_title">Company</p>
+      <h2 class="Company_title">会社概要</h2>
+      <table class="Company_detail" >
+       <tr class="Company_detail_item">
+         <th>会社名</th>
+         <td>株式会社エストラ</td>
+       </tr>
+       <tr class="Company_detail_item">
+         <th>代表者名</th>
+         <td>福場凛太郎</td>
+       </tr>
+       <tr class="Company_detail_item">
+         <th>本社所在地</th>
+         <td>東京都渋谷区1-1-1</td>
+       </tr>
+       <tr class="Company_detail_item">
+         <th>従業員数</th>
+         <td>100名</td>
+       </tr>
+       <tr class="Company_detail_item">
+         <th>電話番号</th>
+         <td>0120-00-0000</td>
+       </tr>
+       <tr class="Company_detail_item">
+         <th>資本金</th>
+         <td>￥10,000,000</td>
+       </tr>
+       
+      </table>
+     
+     </div>
+    </div>
 
   </main>
   
