--- a/index.html
+++ b/index.html
@@ -180,6 +180,23 @@
      
      </div>
     </div>
+    <div class="other">
+      <div class="recruit">
+        <img src="img/recruit.png" class="recruit_img">
+        <h3 class="recruit_title"><a href="#" >採用情報</a></h3>
+
+      </div>
+      <div class="interview">
+        <img src="img/interview.png" class="interview_img">
+        <h3 class="interview_title"><a href="#">社員インタビュー</a></h3>
+      </div>
+    </div>
+    <div class="Toiawase">
+      <p class="Toiawase_text">お問い合わせはこちら</p>
+      <a href="#" class="Toiawase_btn">お問い合わせ</a>
+
+    </div>
+    <small>&copy;estra,inc All Rights Reserved.</small>
 
   </main>
   
