--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       </div>
     </div>
     <div class="Toiawase">
-      <p class="Toiawase_text">お問い合わせはこちら</p>
+      <p class="Toiawase_text">株式会社エストラへのお問い合わせはこちら</p>
       <a href="#" class="Toiawase_btn">お問い合わせ</a>
 
     </div>
