--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
           <div class="Blog_card_content">
             <p class="Blog_card_text">プログラミング学習の勉強方法を特集。挫折しない秘訣とは？</p>
             <div class="Blog_card_parts">
-              <p>2021/01/01</p>
-              <p>#COACHTECH</p>
+              <p class="Blog_card_parts_month">2021/01/01</p>
+              <p class="Blog_card_parts_coach">#COACHTECH</p>
             </div>
           </div>
         </div>  
@@ -127,8 +127,8 @@
           <div class="Blog_card_content">
             <p class="Blog_card_text">プログラミング学習の勉強方法を特集。挫折しない秘訣とは？</p>
             <div class="Blog_card_parts">
-              <p>2021/01/01</p>
-              <p>#COACHTECH</p>
+              <p class="Blog_card_parts_month">2021/01/01</p>
+              <p class="Blog_card_parts_coach">#COACHTECH</p>
             </div>
           </div>
         </div>
@@ -137,8 +137,8 @@
           <div class="Blog_card_content">
             <p class="Blog_card_text">プログラミング学習の勉強方法を特集。挫折しない秘訣とは？</p>
             <div class="Blog_card_parts">
-              <p>2021/01/01</p>
-              <p>#COACHTECH</p>
+            <p class="Blog_card_parts_month">2021/01/01</p>
+            <p class="Blog_card_parts_coach">#COACHTECH</p>
             </div>
           </div>
         </div>
@@ -192,7 +192,8 @@
       </div>
     </div>
     <div class="Toiawase">
-      <p class="Toiawase_text">株式会社エストラへのお問い合わせはこちら</p>
+      <p class="Toiawase_text">株式会社エストラへのお問い合わせはこちらから</p>
+      <div class="Toiawase_line"></div>
       <a href="#" class="Toiawase_btn">お問い合わせ</a>
 
     </div>
