--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Document</title>
   <link rel="stylesheet" href="CSS/reset.CSS">
   <link rel="stylesheet" href="CSS/style.CSS">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="header">
@@ -153,7 +156,7 @@
       <table class="Company_detail" >
        <tr class="Company_detail_item">
          <th>会社名</th>
-         <td>株式会社エストラ</td>
+         <td>株式会社estra</td>
        </tr>
        <tr class="Company_detail_item">
          <th>代表者名</th>
@@ -192,7 +195,7 @@
       </div>
     </div>
     <div class="Toiawase">
-      <p class="Toiawase_text">株式会社エストラへのお問い合わせはこちらから</p>
+      <p class="Toiawase_text">株式会社estraへのお問い合わせはこちらから</p>
       <div class="Toiawase_line"></div>
       <a href="#" class="Toiawase_btn">お問い合わせ</a>
 
